# PythonQuiz

./: index.py  main.py  pyproject.toml  readme.md  test
GUI/: Round1.py  mainGUI.py
Questions/: easy.py  hard.py  medium.py  questions.py
questionScripts/: questionclass.py  round1_easy.py
