[tool.poetry]
name = "pythonquiz"
version = "0.1.0"
description = "A small quiz, desktop application."
authors = ["Tyler2P", "willos2006"]

[tool.poetry.dependencies]
python = "^3.8"
threadsafe-tkinter = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
