[tool.poetry]
name = "pythonquiz"
version = "0.1.0"
description = "This app was created by Tyler2P & willos2006."
authors = ["Tyler2P", "willos2006"]

[tool.poetry.dependencies]
python = "^3.8"
threadsafe-tkinter = "^1.0.2"
pyproject = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
